<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="enter_discount_amount">Enter Discount Amount</string>
    <string name="discount">Discount(%)</string>
    <string name="gst">ToggleButton</string>
    <string name="no_svs">NO SVS</string>
    <string name="split">split</string>
    <string name="reset">reset</string>
</resources>